--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body::before {
     position: absolute;
     width: 100%;
     height: 100%;
-    opacity: 0.4;
+    opacity: 0.3;
 }
 
 .container {
@@ -49,8 +49,11 @@ body::before {
 }
 
 .container__informacoes {
-    flex: 1;
-    padding: 3rem;
+    padding: 1rem;
+}
+
+.container__imagem-pessoa {
+    width: 450px;
 }
 
 .container__botao {
@@ -92,8 +95,8 @@ body::before {
 
 h1 {
     font-family: 'Chakra Petch', sans-serif;
-    font-size: 72px;
-    padding-bottom: 3rem;
+    font-size: 66px;
+    padding-bottom: 1rem;
 }
 
 p,
@@ -104,6 +107,20 @@ button {
 .texto__paragrafo {
     font-size: 32px;
     font-weight: 400;
+}
+
+.texto__pequeno {
+    font-weight: 700;
+    letter-spacing: 1px;
+
+    color: rgb(106, 141, 255);
+    margin-top: 10px;
+}
+
+.texto__pequeno i {
+    color: #d8e9ff;
+    font-size: 20px;
+    margin-right: 10px;
 }
 
 button:disabled {
@@ -132,9 +149,44 @@ button:disabled {
     .container__conteudo {
         display: block;
         position: inherit;
+        margin: 0 auto;
     }
 
     .container__informacoes {
-        padding: 1rem
+        padding: 1rem;
+    }
+}
+
+@media screen and (max-width: 513px) {
+    .container__texto h1{
+        font-size: 43px;
+        text-align: center;
+    }
+
+    .texto__paragrafo p{
+        font-size: 20px;
+        text-align: center;
+    }
+
+    .container__input {
+        height: 32px;
+        padding: 2rem;
+    }
+
+    .container__botoes {
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 10px;
+    }
+
+    .container__botao {
+        padding: 6px 4px;
+        width: 80%;
+        font-size: 24px;
+        margin-top: 0;
+    }
+
+    .container__botao:nth-child(1) {
+        margin-top: 15px;
     }
 }
