--- a/style.css
+++ b/style.css
@@ -29,9 +29,10 @@ body::before {
 .container {
     width: 80%;
     height: 80%;
+
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     border-radius: 24px;
     border: 1px solid #1875E8;
     box-shadow: 4px 4px 20px 0px rgba(1, 8, 14, 0.15);
@@ -44,11 +45,15 @@ body::before {
 .container__conteudo {
     display: flex;
     align-items: center;
+    justify-content: center;
     position: absolute;
     bottom: 0;
 }
 
 .container__informacoes {
+    display: flex;
+    flex-direction: column;
+    
     padding: 1rem;
 }
 
@@ -136,7 +141,6 @@ button:disabled {
     .container__botao {
         font-size: 16px;
     }
-
 
     .texto__paragrafo {
         font-size: 24px;
